package CA4;

public class ThanhVienA{
    private Topic topic;

    public ThanhVienA(Topic topic) {
        this.topic = topic;
    }
}
